# compass

./: .coveragerc  .env.example  .gitignore  AGENTS.md  DYNAMODB_DESIGN.md  Dockerfile  Dockerfile.app  Dockerfile.job_processor  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
app/: constants.py  localization.py  main.py  template_utils.py
app/assessments/: __init__.py  base.py  routes.py  services.py  validation.py
app/auth/: __init__.py  config.py  middleware.py  models.py  oauth.py  routes.py  websocket.py
app/chat/: action_context.py  aws_resource_scanner.py  repository.py  routes.py  services.py  streaming.py
app/controls/: __init__.py  routes.py  services.py  validation.py
app/database/: __init__.py  base.py  config.py  manager.py  operations.py
app/evidence/: __init__.py  routes.py  services.py  sqs_service.py  validation.py
app/job_executions/: __init__.py  routes.py  services.py
app/job_processor/: __init__.py  aws_config_service.py  constants.py  lambda.py
app/job_templates/: routes.py  services.py  validation.py
app/locales/: messages.pot  messages_manual.pot
app/localization/: __init__.py  middleware.py  utils.py
app/scan_job_executions/: routes.py  services.py
app/scan_job_templates/: __init__.py  routes.py  services.py
app/security/: __init__.py  cors.py  middleware.py  session.py
app/templates/: base.html  index.html  security.html  utils.py
scripts/: .env.example  README.md  generate_embeddings.py
terraform/aws/: ecr.tf  iam.tf  (+7 more)
tests/: __init__.py  conftest.py
(+106 files in other folders)
