[project]
name = "compass"
version = "0.1.0"
description = "A platform for automating security assessments"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "authlib>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "email-validator>=2.2.0",
    "babel>=2.16.0",
    "mangum>=0.19.0",
    "pynamodb>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.8.0",
    "bandit>=1.7.5",
]
